# docs/swagger.yaml
@@ -13,6 +13,15 @@ definitions:
       password:
         type: string
     type: object
+  handler.TokenDetails:
+    properties:
+      access_token:
+        type: string
+      expires_at:
+        type: integer
+      refresh_token:
+        type: string
+    type: object
   handler.errorResponse:
     properties:
       message:
@@ -59,6 +68,45 @@ paths:
           schema:
             $ref: '#/definitions/handler.errorResponse'
       summary: GetUsers
+      tags:
+      - auth
+  /auth/refresh:
+    post:
+      consumes:
+      - application/json
+      description: refresh token
+      operationId: refresh
+      parameters:
+      - description: refresh token
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/handler.TokenDetails'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: token
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Refresh
       tags:
       - auth
   /auth/sign-in:
